# signal-shard

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  project-plan.md  pyproject.toml  reducer-spec.md  requirements-dev.txt  requirements.txt  state-machine.html
.hypothesis/constants/: 02d960ac66b88335  099baded0eb2d330  09e851e71849bd47  1cfbb551d43ff39b  1dcd60d5a9b2af24  229b7a1e95cde0e8  24feaaa638e6ed9a  26153940816b6a68  2c97c95509e6d6fa  3d87dbd3490b1153  3e0eb2207571a26a  47f9fb66e33c0b32  48005a0f8e0d624e  4a235502c84bbdc7  4bbaf7e19945e531  4c2999aa46c3e201  63cb3caa68788a1c  67833fedf202b820  67b0a8ccf18bf5d2  6a4645270a8b6a44  72a0dffe50d11835  74944473d1de0d8d  762843515ecd1b97  764d6071f1bf3c89  793283b81a0f71ad  7a2bfef45daf2781  7e756f76a54dced5  8963070dbfe343ac  8e201de617f02ade  9c407591eb0f16d4  a0e606b0d9e3b1a7  a0ee17f62aeb797e  a70b2e18842664e2  ad0a6d7151a6cbee  ad90a3bd06a2e4ec  b89cd5d396867a71  b90e010c94254504  bd4d7361ebcef4be  bdb4e1311877737e  c742754fa5047b2e  (+11 more)
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: project-idea.md  runbook.md  sample-email-query.json  sample-to-do-list.json
docs/architecture-decision-records/: ADR-001-sqlite-for-v1.md  ADR-002-rules-only-bootstrap.md  ADR-003-reducer-as-pure-function.md  ADR-004-pluggable-auth.md
src/email_intel/: __init__.py  app.py  config.py  pipeline.py  scheduler.py
tests/: conftest.py
tests/classify/: _builders.py  test_determinism.py  test_gate.py  test_pipeline.py  test_rules_a.py  test_rules_override.py
tests/graph/: conftest.py  test_auth.py  (+5 more)
(+74 files in other folders)
