[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email_intel"
version = "0.1.0"
description = "Personal Email Intelligence System with Microsoft Graph + Microsoft To Do"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "Jinja2>=3.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "msal>=1.26",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "structlog>=24.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.9",
    "respx>=0.20",
]

[project.scripts]
email-intel = "email_intel.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
email_intel = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
